dark mode adjustments + some bug fixes

--- a/client/css/components/comment.css
+++ b/client/css/components/comment.css
@@ -1,7 +1,7 @@
 @import url('../base/default.css');
 
 .comment {
-    padding: 0em 0.5em 1em 0.5em;
+    padding: 0em 0.5em 0.5em 0.5em;
 
     border-bottom: var(--border-small);
     
